Fix padding on mobile

--- a/_sass/_uswds-theme-custom-styles.scss
+++ b/_sass/_uswds-theme-custom-styles.scss
@@ -227,7 +227,9 @@ Typography
 }
 
 .grid-row {
-  padding: 0 5em;
+  @include at-media("tablet") {
+    padding: 0 5em;
+  }
 }
 
 .centered-image {
